--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Miklos Maroti <mmaroti@gmail.com>
 Robert Kereskenyi <roby@isis.vanderbilt.edu>
 Tamas Kecskes <tkecskes@isis.vanderbilt.edu>
+Brian Broll <brian.broll@vanderbilt.edu>
