--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,6 @@ Tamas Kecskes <tkecskes@isis.vanderbilt.edu>
 Brian Broll <brian.broll@vanderbilt.edu>
 Zsolt Lattmann <lattmann@isis.vanderbilt.edu>
 Naba Bana <laszlo.juracz@gmail.com>
-Kevin Smyth <ksmyth@isis.vanderbilt.edu>
+Kevin Smyth <kevin.m.smyth@gmail.com>
 Hakan Tunc <hakan@isis.vanderbilt.edu>
 Peter Volgyesi <peter.volgyesi@gmail.com>
